RDAP Relation Search Links (#1606)
* feat: create controller

* feat: rdap Relation endpoint and ITs

* feat: fix bottom to match the RFC

* feat: remove unecessary changes and fix typo

* feat: add more ITs

* feat: remove unecessary changes

* feat: enable status query parameter

* feat: add Integration tests for status query parameter

* feat: add test for status active

* feat: add redirect, and TODOS

* feat: Add it

* feat: add extra links and fix ITs

* feat: Add ITs

* feat: remove import

* feat: add relation conformances

* feat: add its for relations

* feat: add an IT for export database tests and include dummy object in snap

* feat: nrtmv4 snapshot should create dummy object

* Revert "feat: add an IT for export database tests and include dummy object in snap"

This reverts commit c1dc87fc4549b3ec2632422f12ec0e9d821f80a3.

* Revert "feat: nrtmv4 snapshot should create dummy object"

This reverts commit a8f140a279aa90039bd0b0880955d66a85488e4c.

* feat: remove non related changes

* feat: remove status and always return active resources

* feat: create a wrong relation type IT

* feat: add a comment into the readme

* feat: apply PR comments

* feat: renaming methods

* feat: use stringUtils and update Interval java doc

* feat: remove Type converter and do the logic in the enum

* feat: refactors

* feat: rename

* feat: remove duplicated ;

* feat: return not implemented for autnums

* feat: us up from top to recursive search and inet6num logic

* feat: status is active by default

* feat: remove unecessary changes

* feat: unecessary changes

* feat: rirSearch1 search just in the /help

* Revert "feat: rirSearch1 search just in the /help"

This reverts commit 1e8fce061db61bd2b930c6a112f0a9129c98f070.

* feat: use stringutils

* feat: remove unecessary changes

* feat: basic search should always have conformance

* feat: more test for conformances

* feat: refact