@@ -10,6 +10,7 @@ import jakarta.ws.rs.WebApplicationException;
 import jakarta.ws.rs.client.WebTarget;
 import jakarta.ws.rs.core.MediaType;
 import net.ripe.db.whois.api.RestTest;
+import net.ripe.db.whois.api.rdap.RdapConformance;
 import net.ripe.db.whois.api.rdap.domain.Action;
 import net.ripe.db.whois.api.rdap.domain.Domain;
 import net.ripe.db.whois.api.rdap.domain.Entity;
@@ -41,6 +42,7 @@ import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -240,7 +242,7 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(Domain.class);
 
-        assertCommon(domain);
+        assertDomain(domain);
         assertThat(domain.getHandle(), equalTo("31.12.202.in-addr.arpa"));
         assertThat(domain.getLdhName(), equalTo("31.12.202.in-addr.arpa."));
         assertThat(domain.getObjectClassName(), is("domain"));
@@ -286,10 +288,11 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
         assertTnCNotice(notices.get(2), "https://rdap.db.ripe.net/domain/31.12.202.in-addr.arpa");
 
          final List<Link> links= domain.getLinks();
-        assertThat(links, hasSize(1));
+        assertThat(links, hasSize(7));
+        assertRelationLinks(links);
 
-        assertThat(links.get(0).getRel(), is("copyright"));
-        assertThat(links.get(0).getHref(), is("http://www.ripe.net/data-tools/support/documentation/terms"));
+        assertThat(links.getLast().getRel(), is("copyright"));
+        assertThat(links.getLast().getHref(), is("http://www.ripe.net/data-tools/support/documentation/terms"));
     }
 
     @Test
@@ -298,7 +301,7 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(Domain.class);
 
-        assertCommon(domain);
+        assertDomain(domain);
         assertThat(domain.getHandle(), equalTo("31.12.202.in-addr.arpa"));
         assertThat(domain.getLdhName(), equalTo("31.12.202.in-addr.arpa."));
         assertThat(domain.getObjectClassName(), is("domain"));
@@ -340,6 +343,7 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
+        assertDomain(searchResult);
         assertThat(searchResult.getDomainSearchResults(), is(nullValue()));
     }
 
@@ -538,7 +542,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .request(MediaType.APPLICATION_JSON_TYPE)
                 .get(SearchResult.class);
 
-        assertThat(response.getEntitySearchResults().get(0).getHandle(), equalTo("ORG-TEST1-TEST"));
+        assertThat(response.getEntitySearchResults().getFirst().getHandle(), equalTo("ORG-TEST1-TEST"));
+        assertThat(response.getRdapConformance(), containsInAnyOrder("cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
     }
 
     @Test
@@ -816,6 +821,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
 
         assertThat(response.getIpSearchResults().size(), is(1));
         assertThat(response.getIpSearchResults().getFirst().getHandle(), equalTo("0.0.0.0 - 255.255.255.255"));
+        assertThat(response.getRdapConformance(), containsInAnyOrder("rirSearch1", "ips", "ipSearchResults",
+                "cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
     }
 
     @Test
@@ -1034,6 +1041,8 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
 
         assertThat(response.getAutnumSearchResults().size(), is(1));
         assertThat(response.getAutnumSearchResults().getFirst().getName(), equalTo("AS-TEST"));
+        assertThat(response.getRdapConformance(), containsInAnyOrder("rirSearch1", "autnums", "autnumSearchResults",
+                "cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
     }
 
     @Test
@@ -1119,10 +1128,30 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
                 .map(Redaction::getPrePath)
                 .collect(Collectors.toList()), containsInAnyOrder("$.entities[?(@.handle=='PP1-TEST')].vcardArray[1][?(@[0]=='e-mail')]"));
 
-        assertThat(result.getRdapConformance(), containsInAnyOrder("cidr0", "rdap_level_0", "nro_rdap_profile_0", "redacted"));
+        assertThat(result.getRdapConformance(), containsInAnyOrder("cidr0", "rdap_level_0",
+                "nro_rdap_profile_0",
+                "redacted"));
     }
 
+    // Relation links
+    @Test
+    public void search_domain_then_domain_relations(){
+        final SearchResult response = createResource("domains?name=31.12.202.in-addr.arpa")
+                .request(MediaType.APPLICATION_JSON_TYPE)
+                .get(SearchResult.class);
+
+        assertThat(response.getDomainSearchResults().getFirst().getHandle(), equalTo("31.12.202.in-addr.arpa"));
+        final Map<String, String> relationLinks = getRelationCallsFromLinks(response.getDomainSearchResults().getFirst().getLinks());
+        assertThat(relationLinks.size(), is(6));
+    }
+
+
     // helper methods
+
+    private void assertRelationLinks(final List<Link> links){
+        final Map<String, String> relationCalls = getRelationCallsFromLinks(links);
+        assertThat(relationCalls.size(), is(6));
+    }
 
     protected WebTarget createResource(final String path) {
         return RestTest.target(getPort(), String.format("rdap/%s", path));
@@ -1159,6 +1188,15 @@ public class RdapElasticServiceTestIntegration extends AbstractElasticSearchInte
     protected void assertErrorDescriptionContains(final WebApplicationException exception, final String description) {
         final Entity entity = exception.getResponse().readEntity(Entity.class);
         assertThat(entity.getDescription().get(0), containsString(description));
+    }
+
+    private void assertDomain(RdapObject object) {
+        assertThat(object.getPort43(), is("whois.ripe.net"));
+        assertThat(object.getRdapConformance(), hasSize(5));
+        assertThat(object.getRdapConformance(), containsInAnyOrder(RdapConformance.RIR_SEARCH_1.getValue(),
+                RdapConformance.LEVEL_0.getValue(),
+                RdapConformance.CIDR_0.getValue(),
+                RdapConformance.NRO_PROFILE_0.getValue(), RdapConformance.REDACTED.getValue()));
     }
 
     private void assertCommon(RdapObject object) {
